--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preload" href="css/estilo.css" as="style">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <link rel="stylesheet" href="css/estilo.css">
-    <title>Document</title>
+    <title>Portafolio</title>
 </head>
 <body>
     <header class="head-box">
