--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portafolio Web Christopher Lopez">
     <meta property="og:title" content="Portafolio de Manxiko" />
-    <meta property="og:description" content="Mis proyectos en HTML, CSS y JavaScript." />
+    <meta property="og:description" content="Portafolio Web Christopher Lopez, aca encuentras mis proyectos." />
     <meta property="og:image" content="https://manxiko.github.io/Portafolio-Test/img/preview.png" />
     <meta property="og:url" content="https://manxiko.github.io/Portafolio-Test/" />
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
