--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portafolio Web Christopher Lopez">
-    <meta property="og:title" content="Portafolio de Manxiko" />
-    <meta property="og:description" content="Portafolio Web Christopher Lopez, aca encuentras mis proyectos." />
-    <meta property="og:image" content="https://manxiko.github.io/Portafolio-Test/img/preview.png" />
-    <meta property="og:url" content="https://manxiko.github.io/Portafolio-Test/" />
+    <meta name="description" content="Portafolio Web Christopher Lopez, aca encuentras mis proyectos">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link rel="preload" href="css/estilo.css" as="style">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
