--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                 <div class="redes">
                     <h3>Redes De Contacto</h3>
                     <div class="links-redes">
-                        <a href="https://www.github.com"><i class="devicon-github-original"></i></a>
-                        <a href="https://www.linkedin.com"><i class="devicon-linkedin-plain colored"></i></a>
+                        <a href="https://www.github.com" target="_blank" rel="noreferrer"><i class="devicon-github-original"></i></a>
+                        <a href="https://www.linkedin.com" target="_blank" rel="noreferrer"><i class="devicon-linkedin-plain colored"></i></a>
                         <div class="gmail">
                             <img src="img/Gmail.svg" alt="Gmail"><span>bodom9074@gmail.com</span>
                         </div>
