--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
             </div>
         </section>
     </main>
-    <footer>
-        <small>©2025 Christopher Lopez Estudiante. Todos los derechos reservados.</small>
-    </footer>
     <script type="module" src="js/main.js"></script>
+    <script>
+        window.si = window.si || function () { (window.siq = window.siq || []).push(arguments); };
+    </script>
+    <script defer src="/_vercel/speed-insights/script.js"></script>
 </body>
 </html>
