--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="yo">
                 <h1 id="h1SobreMi">Sobre Mí</h1>
                 <p>Hola, me llamo Christopher López, tengo 23 años y soy estudiante de Analista Programador. Me apasiona la programación y, en mi tiempo libre, me dedico a practicar y estudiar todo lo relacionado con la programación de Full Stack. También, jugar un rato Albion Online y ajedrez. <br>
-                Este portafolio fue creado ya que estoy en búsqueda de una práctica profesional y para poder mostrar mis proyectos, habilidades y conocimientos.</p>
+                Este portafolio fue creado ya que estoy en búsqueda de realizar mi práctica profesional y para poder mostrar mis proyectos, habilidades y conocimientos.</p>
             </div>
         </section>
         <section id="skills" class="skills-box">
