--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="#sobreMi" id="sobreMiA">Sobre Mí</a>
             <a href="#skills" id="skillsA">Skills</a>
             <a href="#educacion" id="educacionA">Educación</a>
+            <a href="#proyectos" id="proyectosA">Proyectos</a>
             <a href="#contacto" id="contactoA">Contacto</a>
         </nav>
     </header>
