--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portafolio Web Christopher Lopez, aca encuentras mis proyectos">
+    <meta name="description" content="Portafolio Web Christopher López, acá comparto mis proyectos, medios de contacto y redes profesionales.">
     <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <link rel="preload" href="css/estilo.css" as="style">
-    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Portafolio</title>
 </head>
 <body>
     <header class="head-box">
         <nav>
-            <a href="#sobreMi" id="sobreMiA">Sobre Mí</a>
             <a href="#skills" id="skillsA">Skills</a>
             <a href="#educacion" id="educacionA">Educación</a>
             <a href="#proyectos" id="proyectosA">Proyectos</a>
@@ -22,7 +22,8 @@
     </header>
     <main>
         <a href="#top"  class="btn-subir"><img src="img/flechaArriba.png" alt="Subir"></a>
-        <section id="sobreMi" class="info-personal-box">
+        <span class="skills-pulso">Skills<i class="fa-solid fa-arrow-down"></i></span>
+        <section class="info-personal-box">
             <div class="avatar-nombre">
                 <img src="img/avatar.png" alt="Foto Christopher">
                 <p>Christopher López</p>        
@@ -53,25 +54,7 @@
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linuxmint/linuxmint-original.svg" alt="Linux Mint" />
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" alt="HTML" />
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" alt="CSS" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="JavaScript" />  
-                    
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original-wordmark.svg" alt="MongoDB" />  
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" alt="Python" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/oracle/oracle-original.svg" alt="Oracle" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" alt="React" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linuxmint/linuxmint-original.svg" alt="Linux Mint" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" alt="HTML" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" alt="CSS" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="JavaScript" />
-                    
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original-wordmark.svg" alt="MongoDB" />  
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" alt="Python" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/oracle/oracle-original.svg" alt="Oracle" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" alt="React" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linuxmint/linuxmint-original.svg" alt="Linux Mint" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" alt="HTML" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original.svg" alt="CSS" />
-                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="JavaScript" />  
+                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="JavaScript" />   
                 </div>
             </div>
         </section>
@@ -80,9 +63,9 @@
         <section id="contacto" class="contacto-cont">
             <h2 id="contactoH2">Contacto</h2>
             <div class="contacto-box">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In et porro veritatis nisi minus dolorem doloribus repudiandae adipisci aliquid, magni dolor blanditiis enim laboriosam obcaecati nostrum laborum aliquam ex nemo.</p>
+                <p>Si estás interesado en conocer más sobre mis proyectos o deseas ponerte en contacto conmigo, aquí te comparto mis medios de contacto y redes profesionales.</p>
                 <div class="redes">
-                    <h3>Redes De Contacto</h3>
+                    <h3>Medios y Redes</h3>
                     <div class="links-redes">
                         <a href="https://www.github.com" target="_blank" rel="noreferrer"><i class="devicon-github-original"></i></a>
                         <a href="https://www.linkedin.com" target="_blank" rel="noreferrer"><i class="devicon-linkedin-plain colored"></i></a>
